# demo-pytest-tox

./: .gitignore  .pylintrc  .python-version  README.md  bootstrap.sh  build.sh  dev-requirements.in  dev-requirements.txt  editable-requirements.in  editable-requirements.txt.dummy  pyproject.toml  setup.py  tasks.py  tox.ini  toxw
.tox/.wrapper/: toxw.config
src/: app.py
tests/: test_app.py
