[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "app"
authors = []
readme = "README.md"
dynamic = ["version", "description"]

[tool.isort]
# from https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
profile = "black"

[tool.mypy]
pretty = true
files = "src,tests"